# ckb-cinnabar-scripts-template

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
calculator/: Cargo.toml
calculator/examples/: open.rs  purchase.rs
calculator/src/: lib.rs  operation.rs
contracts/blind-box-type/: Cargo.toml  README.md
contracts/blind-box-type/src/: main.rs
contracts/simple-lock/: Cargo.toml
contracts/simple-lock/src/: main.rs
deployment/testnet/: blind-box-type.json
migration/testnet/: simple-lock.json
src/: command.rs  handle.rs  lib.rs  main.rs  object.rs
tests/: Cargo.toml
tests/src/: tests.rs
