[workspace]
resolver = "2"

members = [
  "calculator",
  "tests",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/blind-box-type",
]

[workspace.dependencies]
ckb-cinnabar = { path = "../cinnabar" }
ckb-cinnabar-verifier = { path = "../cinnabar/verify" }

[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-cinnabar = { workspace = true }

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = true
codegen-units = 1
