[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "calculator",
  "tests",
  "contracts/blind-box-type",
]

[workspace.dependencies]
ckb-cinnabar = { git = "https://github.com/ashuralyk/ckb-cinnabar", rev = "821c433" }
ckb-cinnabar-verifier = { git = "https://github.com/ashuralyk/ckb-cinnabar", rev = "821c433" }

[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-cinnabar = { workspace = true }

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = true
codegen-units = 1
